# Hangman

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Hangman.cbp  Hangman.cscope_file_list  Hangman.depend  Hangman.layout  main.cpp
cmake/Modules/: FindAllegro5.cmake
res/: Hangman.scml  Head.xcf  Stick.xcf  Thumbs.db  dank.aup
res/dank_data/e00/d00/: e0000031.au  e00000a1.au  e00000a2.au  e00000b0.au  e00000da.au  e00000fe.au  e0000194.au  e00001c5.au  e0000201.au  e0000246.au  e00002f1.au  e00003e6.au  e00003fb.au  e0000451.au  e000069c.au  e0000848.au  e000098b.au  e0000b49.au  e0000d67.au  e0000daf.au  e0000dc9.au  e0000dd6.au  e0000e73.au  e0000f0b.au  e0000f1d.au  e0000f5f.au  e0000fa9.au
res/data/: _words.txt  words.txt
res/graphics/: Big Reactors Construction.xls  Hangman.autosave.scml  Head.xcf  NewProject.autosave.scml  Stick.xcf
src/: main.cpp
src/gameobjects/: gameobject.h  man.cpp
src/gameobjects/graphics/: sprite.cpp  sprite.h
src/gameobjects/hangman/: man.h
src/gameobjects/ui/: button.cpp  button.h  letter.h
src/scenes/: game.cpp  game.h  help.cpp  help.h  mainmenu.cpp  mainmenu.h  scene.h
src/util/: assetmanager.cpp  assetmanager.h
